overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,19 @@ body {
   font-size: 14px;
   overflow-x: hidden;
 }
+
+.overflow-visible {
+  margin: 0;
+  padding: 0;
+  color: #99a1ab;
+  font-size: 14px;
+  overflow-x: hidden;
+}
+
+.overflow-hidden {
+  margin: 0;
+  padding: 0;
+  color: #99a1ab;
+  font-size: 14px;
+  overflow: hidden;
+}
